--- a/Test Rosenbrock Medium.ipynb
+++ b/Test Rosenbrock Medium.ipynb
@@ -49,7 +49,7 @@
    "outputs": [],
    "source": [
     "# init\n",
-    "steepness = 30    # steepness factor\n",
+    "steepness = 100   # steepness factor\n",
     "num_blocks = 3    # number of expression blocks\n",
     "num_data = 5000   # number of data\n",
     "test_size = 1000  # number of test size\n",
@@ -123,7 +123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [19:06<00:00,  1.15s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████| 1000/1000 [1:53:00<00:00,  6.78s/it]\n"
      ]
     },
     {
@@ -132,13 +132,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000            1000.0   1000.000000\n",
-      "mean      4.349035               0.0      1.145088\n",
-      "std       4.947727               0.0      2.056567\n",
-      "min       0.016877               0.0      0.092586\n",
-      "25%       0.693364               0.0      0.316740\n",
-      "50%       2.484704               0.0      0.688182\n",
-      "75%       6.249823               0.0      1.132088\n",
-      "max      29.810294               0.0     28.444026\n",
+      "mean      4.349035               0.0      6.779479\n",
+      "std       4.947727               0.0     32.429101\n",
+      "min       0.016877               0.0      0.092768\n",
+      "25%       0.693364               0.0      0.685210\n",
+      "50%       2.484704               0.0      1.010714\n",
+      "75%       6.249823               0.0      1.791982\n",
+      "max      29.810294               0.0    452.177147\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -159,7 +159,7 @@
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/rb_exact.csv\")"
+    "df.to_csv(\"result/rb_exact_m.csv\")"
    ]
   },
   {
@@ -190,22 +190,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:22<00:00, 12.16it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:38<00:00, 10.19it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000            1000.0   1000.000000\n",
-      "mean   4040.399628               0.0      0.081648\n",
-      "std    3182.304757               0.0      0.033807\n",
-      "min     101.611730               0.0      0.059331\n",
-      "25%     983.457008               0.0      0.062361\n",
-      "50%    2959.336296               0.0      0.075848\n",
-      "75%    7798.104504               0.0      0.078218\n",
-      "max    8328.507513               0.0      0.204479\n",
+      "            Obj Val  Constraints Viol  Elapsed Time\n",
+      "count   1000.000000            1000.0   1000.000000\n",
+      "mean   13329.119628               0.0      0.097520\n",
+      "std    10582.523817               0.0      0.040852\n",
+      "min      311.611730               0.0      0.061005\n",
+      "25%     3223.457008               0.0      0.076820\n",
+      "50%     9749.336296               0.0      0.077978\n",
+      "75%    25854.650336               0.0      0.093159\n",
+      "max    27438.507513               0.0      0.310860\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -226,7 +226,7 @@
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/rb_heur.csv\")"
+    "df.to_csv(\"result/rb_heur_m.csv\")"
    ]
   },
   {
@@ -293,48 +293,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 0  train_loss: 393.37066650390625\n",
-      "epoch: 1  train_loss: 236.1530303955078\n",
-      "epoch: 2  train_loss: 248.39842224121094\n",
-      "epoch: 3  train_loss: 220.25059509277344\n",
-      "epoch: 4  train_loss: 252.8489227294922\n",
-      "epoch: 5  train_loss: 311.5302429199219\n",
-      "epoch: 6  train_loss: 364.1553039550781\n",
-      "epoch: 7  train_loss: 297.86102294921875\n",
-      "epoch: 8  train_loss: 356.09906005859375\n",
-      "epoch: 9  train_loss: 432.9923095703125\n",
-      "epoch: 10  train_loss: 418.4895324707031\n",
-      "epoch: 11  train_loss: 417.7132568359375\n",
-      "epoch: 12  train_loss: 301.82012939453125\n",
-      "epoch: 13  train_loss: 309.495849609375\n",
-      "epoch: 14  train_loss: 314.6213073730469\n",
-      "epoch: 15  train_loss: 317.92095947265625\n",
-      "epoch: 16  train_loss: 322.7508850097656\n",
-      "epoch: 17  train_loss: 252.92637634277344\n",
-      "epoch: 18  train_loss: 218.02127075195312\n",
-      "epoch: 19  train_loss: 277.4512634277344\n",
-      "epoch: 20  train_loss: 297.1280822753906\n",
-      "epoch: 21  train_loss: 318.3865966796875\n",
-      "epoch: 22  train_loss: 335.3597717285156\n",
-      "epoch: 23  train_loss: 357.18841552734375\n",
-      "epoch: 24  train_loss: 321.3070068359375\n",
-      "epoch: 25  train_loss: 334.1412353515625\n",
-      "epoch: 26  train_loss: 327.4801940917969\n",
-      "epoch: 27  train_loss: 327.1810302734375\n",
-      "epoch: 28  train_loss: 328.8029479980469\n",
-      "epoch: 29  train_loss: 329.9187316894531\n",
-      "epoch: 30  train_loss: 364.4698181152344\n",
-      "epoch: 31  train_loss: 371.3477783203125\n",
-      "epoch: 32  train_loss: 339.40740966796875\n",
-      "epoch: 33  train_loss: 330.9693603515625\n",
-      "epoch: 34  train_loss: 338.9005432128906\n",
-      "epoch: 35  train_loss: 361.0300598144531\n",
-      "epoch: 36  train_loss: 315.2174072265625\n",
-      "epoch: 37  train_loss: 338.2124328613281\n",
-      "epoch: 38  train_loss: 353.9998779296875\n",
-      "epoch: 39  train_loss: 362.0919494628906\n",
-      "epoch: 40  train_loss: 345.6153259277344\n",
-      "epoch: 41  train_loss: 301.2157897949219\n",
+      "epoch: 0  train_loss: 714.4896240234375\n",
+      "epoch: 1  train_loss: 740.417236328125\n",
+      "epoch: 2  train_loss: 770.8599853515625\n",
+      "epoch: 3  train_loss: 753.010498046875\n",
+      "epoch: 4  train_loss: 774.0914916992188\n",
+      "epoch: 5  train_loss: 808.5006103515625\n",
+      "epoch: 6  train_loss: 766.5673828125\n",
+      "epoch: 7  train_loss: 712.2118530273438\n",
+      "epoch: 8  train_loss: 785.9727172851562\n",
+      "epoch: 9  train_loss: 780.9059448242188\n",
+      "epoch: 10  train_loss: 793.92236328125\n",
+      "epoch: 11  train_loss: 770.1373291015625\n",
+      "epoch: 12  train_loss: 803.3665771484375\n",
+      "epoch: 13  train_loss: 748.1373291015625\n",
+      "epoch: 14  train_loss: 776.3211669921875\n",
+      "epoch: 15  train_loss: 778.6280517578125\n",
+      "epoch: 16  train_loss: 782.7469482421875\n",
+      "epoch: 17  train_loss: 822.858642578125\n",
+      "epoch: 18  train_loss: 784.6966552734375\n",
+      "epoch: 19  train_loss: 784.09423828125\n",
+      "epoch: 20  train_loss: 755.5997314453125\n",
+      "epoch: 21  train_loss: 791.8162231445312\n",
+      "epoch: 22  train_loss: 710.8643798828125\n",
+      "epoch: 23  train_loss: 801.2280883789062\n",
+      "epoch: 24  train_loss: 900.1364135742188\n",
+      "epoch: 25  train_loss: 850.956298828125\n",
+      "epoch: 26  train_loss: 859.9680786132812\n",
+      "epoch: 27  train_loss: 854.03955078125\n",
+      "epoch: 28  train_loss: 831.4151611328125\n",
+      "epoch: 29  train_loss: 843.4048461914062\n",
+      "epoch: 30  train_loss: 865.0391235351562\n",
+      "epoch: 31  train_loss: 870.4349975585938\n",
+      "epoch: 32  train_loss: 858.195068359375\n",
+      "epoch: 33  train_loss: 872.4003295898438\n",
+      "epoch: 34  train_loss: 820.6697387695312\n",
+      "epoch: 35  train_loss: 809.210205078125\n",
+      "epoch: 36  train_loss: 879.5816040039062\n",
+      "epoch: 37  train_loss: 835.8436889648438\n",
+      "epoch: 38  train_loss: 828.64794921875\n",
+      "epoch: 39  train_loss: 828.99658203125\n",
+      "epoch: 40  train_loss: 881.269287109375\n",
+      "epoch: 41  train_loss: 905.572998046875\n",
       "Early stopping!!!\n"
      ]
     },
@@ -374,7 +374,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 282.54it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 279.96it/s]\n"
      ]
     },
     {
@@ -383,14 +383,14 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    107.668126          1.521226      0.003039\n",
-      "std      89.210849          1.668557      0.000753\n",
-      "min       0.016877          0.000000      0.001511\n",
-      "25%      49.161547          0.000000      0.002512\n",
-      "50%      71.139965          0.949109      0.003000\n",
-      "75%     180.704463          2.577007      0.003506\n",
-      "max     532.802261          5.954126      0.006596\n",
-      "Number of infeasible solution: 702\n"
+      "mean    172.488021          4.500875      0.003061\n",
+      "std      69.913600          2.855412      0.000801\n",
+      "min       0.918686          0.000000      0.001511\n",
+      "25%     119.792898          2.039958      0.002531\n",
+      "50%     207.926413          4.407502      0.003000\n",
+      "75%     215.842241          6.916592      0.003517\n",
+      "max     325.320161          9.995356      0.007171\n",
+      "Number of infeasible solution: 955\n"
      ]
     }
    ],
@@ -422,7 +422,7 @@
     "time.sleep(1)\n",
     "print(df.describe())\n",
     "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
-    "df.to_csv(\"result/rosenbrock_nm.csv\")"
+    "df.to_csv(\"result/rb_nm_m.csv\")"
    ]
   },
   {
