--- a/Test Rosenbrock Easy.ipynb
+++ b/Test Rosenbrock Easy.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "# init\n",
     "steepness = 30    # steepness factor\n",
-    "num_blocks = 3    # number of expression blocks\n",
+    "num_blocks = 1    # number of expression blocks\n",
     "num_data = 5000   # number of data\n",
     "test_size = 1000  # number of test size\n",
     "val_size = 1000   # number of validation size\n",
@@ -110,7 +110,7 @@
    "outputs": [],
    "source": [
     "from src.problem import msRosenbrock\n",
-    "model = msRosenbrock(steepness, num_blocks)"
+    "model = msRosenbrock(steepness, num_blocks, timelimit=10)"
    ]
   },
   {
@@ -123,7 +123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [19:06<00:00,  1.15s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [09:30<00:00,  1.75it/s]\n"
      ]
     },
     {
@@ -132,13 +132,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000            1000.0   1000.000000\n",
-      "mean      4.349035               0.0      1.145088\n",
-      "std       4.947727               0.0      2.056567\n",
-      "min       0.016877               0.0      0.092586\n",
-      "25%       0.693364               0.0      0.316740\n",
-      "50%       2.484704               0.0      0.688182\n",
-      "75%       6.249823               0.0      1.132088\n",
-      "max      29.810294               0.0     28.444026\n",
+      "mean      1.583312               0.0      0.569553\n",
+      "std       2.198417               0.0      0.330276\n",
+      "min       0.000007               0.0      0.090976\n",
+      "25%       0.125648               0.0      0.329740\n",
+      "50%       0.648800               0.0      0.627853\n",
+      "75%       2.039892               0.0      0.791127\n",
+      "max      11.392356               0.0      7.891120\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -190,7 +190,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:22<00:00, 12.16it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:24<00:00, 11.81it/s]\n"
      ]
     },
     {
@@ -199,13 +199,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000            1000.0   1000.000000\n",
-      "mean   4040.399628               0.0      0.081648\n",
-      "std    3182.304757               0.0      0.033807\n",
-      "min     101.611730               0.0      0.059331\n",
-      "25%     983.457008               0.0      0.062361\n",
-      "50%    2959.336296               0.0      0.075848\n",
-      "75%    7798.104504               0.0      0.078218\n",
-      "max    8328.507513               0.0      0.204479\n",
+      "mean     68.829961               0.0      0.084098\n",
+      "std      42.395181               0.0      0.038278\n",
+      "min       4.334028               0.0      0.058672\n",
+      "25%      32.603227               0.0      0.062121\n",
+      "50%      68.051118               0.0      0.075356\n",
+      "75%      90.896112               0.0      0.078228\n",
+      "max     188.935700               0.0      0.328066\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -245,7 +245,7 @@
    "outputs": [],
    "source": [
     "# hyperparameters\n",
-    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "penalty_weight = 10   # weight of constraint violation penealty\n",
     "hlayers_sol = 4       # number of hidden layers for solution mapping\n",
     "hlayers_rnd = 4       # number of hidden layers for solution mapping\n",
     "hsize = 32            # width of hidden layers for solution mapping\n",
@@ -276,7 +276,7 @@
     "# define rounding model\n",
     "layers_rnd = netFC(input_dim=3*num_blocks+1, hidden_dims=[hsize]*hlayers_rnd, output_dim=2*num_blocks)\n",
     "rnd = roundGumbelModel(layers=layers_rnd, param_keys=[\"p\", \"a\"], var_keys=[\"x\"],\n",
-    "                       output_keys=[\"x_rnd\"], int_ind={\"x\":range(2*num_blocks)}, name=\"round\")\n",
+    "                       output_keys=[\"x_rnd\"], int_ind=model.int_ind, name=\"round\")\n",
     "# build neuromancer problem for rounding\n",
     "components = [smap, rnd]\n",
     "loss = nm.loss.PenaltyLoss(obj_rnd, constrs_rnd)\n",
@@ -293,48 +293,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 0  train_loss: 393.37066650390625\n",
-      "epoch: 1  train_loss: 236.1530303955078\n",
-      "epoch: 2  train_loss: 248.39842224121094\n",
-      "epoch: 3  train_loss: 220.25059509277344\n",
-      "epoch: 4  train_loss: 252.8489227294922\n",
-      "epoch: 5  train_loss: 311.5302429199219\n",
-      "epoch: 6  train_loss: 364.1553039550781\n",
-      "epoch: 7  train_loss: 297.86102294921875\n",
-      "epoch: 8  train_loss: 356.09906005859375\n",
-      "epoch: 9  train_loss: 432.9923095703125\n",
-      "epoch: 10  train_loss: 418.4895324707031\n",
-      "epoch: 11  train_loss: 417.7132568359375\n",
-      "epoch: 12  train_loss: 301.82012939453125\n",
-      "epoch: 13  train_loss: 309.495849609375\n",
-      "epoch: 14  train_loss: 314.6213073730469\n",
-      "epoch: 15  train_loss: 317.92095947265625\n",
-      "epoch: 16  train_loss: 322.7508850097656\n",
-      "epoch: 17  train_loss: 252.92637634277344\n",
-      "epoch: 18  train_loss: 218.02127075195312\n",
-      "epoch: 19  train_loss: 277.4512634277344\n",
-      "epoch: 20  train_loss: 297.1280822753906\n",
-      "epoch: 21  train_loss: 318.3865966796875\n",
-      "epoch: 22  train_loss: 335.3597717285156\n",
-      "epoch: 23  train_loss: 357.18841552734375\n",
-      "epoch: 24  train_loss: 321.3070068359375\n",
-      "epoch: 25  train_loss: 334.1412353515625\n",
-      "epoch: 26  train_loss: 327.4801940917969\n",
-      "epoch: 27  train_loss: 327.1810302734375\n",
-      "epoch: 28  train_loss: 328.8029479980469\n",
-      "epoch: 29  train_loss: 329.9187316894531\n",
-      "epoch: 30  train_loss: 364.4698181152344\n",
-      "epoch: 31  train_loss: 371.3477783203125\n",
-      "epoch: 32  train_loss: 339.40740966796875\n",
-      "epoch: 33  train_loss: 330.9693603515625\n",
-      "epoch: 34  train_loss: 338.9005432128906\n",
-      "epoch: 35  train_loss: 361.0300598144531\n",
-      "epoch: 36  train_loss: 315.2174072265625\n",
-      "epoch: 37  train_loss: 338.2124328613281\n",
-      "epoch: 38  train_loss: 353.9998779296875\n",
-      "epoch: 39  train_loss: 362.0919494628906\n",
-      "epoch: 40  train_loss: 345.6153259277344\n",
-      "epoch: 41  train_loss: 301.2157897949219\n",
+      "epoch: 0  train_loss: 20.87644386291504\n",
+      "epoch: 1  train_loss: 12.032898902893066\n",
+      "epoch: 2  train_loss: 9.679839134216309\n",
+      "epoch: 3  train_loss: 8.76450252532959\n",
+      "epoch: 4  train_loss: 9.432135581970215\n",
+      "epoch: 5  train_loss: 8.903563499450684\n",
+      "epoch: 6  train_loss: 8.251978874206543\n",
+      "epoch: 7  train_loss: 8.442489624023438\n",
+      "epoch: 8  train_loss: 7.854027271270752\n",
+      "epoch: 9  train_loss: 5.407695293426514\n",
+      "epoch: 10  train_loss: 5.0392961502075195\n",
+      "epoch: 11  train_loss: 4.812459945678711\n",
+      "epoch: 12  train_loss: 4.8394598960876465\n",
+      "epoch: 13  train_loss: 4.972204208374023\n",
+      "epoch: 14  train_loss: 4.737155437469482\n",
+      "epoch: 15  train_loss: 4.713879108428955\n",
+      "epoch: 16  train_loss: 4.8075127601623535\n",
+      "epoch: 17  train_loss: 4.861983776092529\n",
+      "epoch: 18  train_loss: 4.9503936767578125\n",
+      "epoch: 19  train_loss: 4.603105545043945\n",
+      "epoch: 20  train_loss: 4.865034580230713\n",
+      "epoch: 21  train_loss: 4.891582012176514\n",
+      "epoch: 22  train_loss: 4.606245040893555\n",
+      "epoch: 23  train_loss: 4.912778854370117\n",
+      "epoch: 24  train_loss: 4.527417182922363\n",
+      "epoch: 25  train_loss: 4.7947516441345215\n",
+      "epoch: 26  train_loss: 4.702221393585205\n",
+      "epoch: 27  train_loss: 4.876152038574219\n",
+      "epoch: 28  train_loss: 4.875245571136475\n",
+      "epoch: 29  train_loss: 4.528245449066162\n",
+      "epoch: 30  train_loss: 4.743267059326172\n",
+      "epoch: 31  train_loss: 4.668883800506592\n",
+      "epoch: 32  train_loss: 4.686975479125977\n",
+      "epoch: 33  train_loss: 4.715085983276367\n",
+      "epoch: 34  train_loss: 4.90573787689209\n",
+      "epoch: 35  train_loss: 4.657505989074707\n",
+      "epoch: 36  train_loss: 4.6113176345825195\n",
+      "epoch: 37  train_loss: 4.594351768493652\n",
+      "epoch: 38  train_loss: 4.79220724105835\n",
+      "epoch: 39  train_loss: 4.696086883544922\n",
+      "epoch: 40  train_loss: 4.671024799346924\n",
+      "epoch: 41  train_loss: 4.690730094909668\n",
+      "epoch: 42  train_loss: 4.783143997192383\n",
       "Early stopping!!!\n"
      ]
     },
@@ -374,7 +375,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 282.54it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:02<00:00, 373.20it/s]\n"
      ]
     },
     {
@@ -383,14 +384,14 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    107.668126          1.521226      0.003039\n",
-      "std      89.210849          1.668557      0.000753\n",
-      "min       0.016877          0.000000      0.001511\n",
-      "25%      49.161547          0.000000      0.002512\n",
-      "50%      71.139965          0.949109      0.003000\n",
-      "75%     180.704463          2.577007      0.003506\n",
-      "max     532.802261          5.954126      0.006596\n",
-      "Number of infeasible solution: 702\n"
+      "mean      4.931294          0.000678      0.002333\n",
+      "std       4.396258          0.008713      0.000758\n",
+      "min       0.001208          0.000000      0.000999\n",
+      "25%       1.388503          0.000000      0.002000\n",
+      "50%       3.607770          0.000000      0.002006\n",
+      "75%       7.454648          0.000000      0.002575\n",
+      "max      21.020573          0.148556      0.012954\n",
+      "Number of infeasible solution: 9\n"
      ]
     }
    ],
