--- a/Test Rosenbrock Medium.ipynb
+++ b/Test Rosenbrock Medium.ipynb
@@ -43,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "52363c72-0d20-4c08-bd00-0f62aa73686c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# init\n",
-    "steepness = 100   # steepness factor\n",
-    "num_blocks = 3    # number of expression blocks\n",
+    "steepness = 50    # steepness factor\n",
+    "num_blocks = 2    # number of expression blocks\n",
     "num_data = 5000   # number of data\n",
     "test_size = 1000  # number of test size\n",
     "val_size = 1000   # number of validation size\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "21938c00-d73f-4255-bc7c-bce6e8034cf8",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "5ecf81ff-627d-444d-8d90-121c7e20c217",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "f2e7f07c-6a97-44d6-aca7-56f395e0c964",
    "metadata": {},
    "outputs": [],
@@ -123,23 +123,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████| 1000/1000 [1:53:00<00:00,  6.78s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000            1000.0   1000.000000\n",
-      "mean      4.349035               0.0      6.779479\n",
-      "std       4.947727               0.0     32.429101\n",
-      "min       0.016877               0.0      0.092768\n",
-      "25%       0.693364               0.0      0.685210\n",
-      "50%       2.484704               0.0      1.010714\n",
-      "75%       6.249823               0.0      1.791982\n",
-      "max      29.810294               0.0    452.177147\n",
-      "Number of infeasible solution: 0\n"
+      "  5%|████▏                                                                         | 53/1000 [06:29<1:55:56,  7.35s/it]\n",
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
@@ -172,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "id": "356187af-e02d-4478-bf78-ada6a2e1b94b",
    "metadata": {},
    "outputs": [],
@@ -182,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "id": "f4c7fc52-cbbc-4414-bf1d-316d65c8db5b",
    "metadata": {},
    "outputs": [
@@ -190,22 +177,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:38<00:00, 10.19it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:25<00:00, 11.72it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            Obj Val  Constraints Viol  Elapsed Time\n",
-      "count   1000.000000            1000.0   1000.000000\n",
-      "mean   13329.119628               0.0      0.097520\n",
-      "std    10582.523817               0.0      0.040852\n",
-      "min      311.611730               0.0      0.061005\n",
-      "25%     3223.457008               0.0      0.076820\n",
-      "50%     9749.336296               0.0      0.077978\n",
-      "75%    25854.650336               0.0      0.093159\n",
-      "max    27438.507513               0.0      0.310860\n",
+      "           Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1000.000000            1000.0   1000.000000\n",
+      "mean    950.369241               0.0      0.084850\n",
+      "std     616.480055               0.0      0.039165\n",
+      "min     119.733136               0.0      0.059156\n",
+      "25%     321.880600               0.0      0.062185\n",
+      "50%     806.734458               0.0      0.075879\n",
+      "75%    1499.065030               0.0      0.078666\n",
+      "max    2022.924515               0.0      0.388860\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -239,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
@@ -255,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
    "metadata": {},
    "outputs": [],
@@ -276,7 +263,7 @@
     "# define rounding model\n",
     "layers_rnd = netFC(input_dim=3*num_blocks+1, hidden_dims=[hsize]*hlayers_rnd, output_dim=2*num_blocks)\n",
     "rnd = roundGumbelModel(layers=layers_rnd, param_keys=[\"p\", \"a\"], var_keys=[\"x\"],\n",
-    "                       output_keys=[\"x_rnd\"], int_ind={\"x\":range(2*num_blocks)}, name=\"round\")\n",
+    "                       output_keys=[\"x_rnd\"], int_ind=model.int_ind, name=\"round\")\n",
     "# build neuromancer problem for rounding\n",
     "components = [smap, rnd]\n",
     "loss = nm.loss.PenaltyLoss(obj_rnd, constrs_rnd)\n",
@@ -285,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
    "metadata": {},
    "outputs": [
@@ -293,48 +280,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 0  train_loss: 714.4896240234375\n",
-      "epoch: 1  train_loss: 740.417236328125\n",
-      "epoch: 2  train_loss: 770.8599853515625\n",
-      "epoch: 3  train_loss: 753.010498046875\n",
-      "epoch: 4  train_loss: 774.0914916992188\n",
-      "epoch: 5  train_loss: 808.5006103515625\n",
-      "epoch: 6  train_loss: 766.5673828125\n",
-      "epoch: 7  train_loss: 712.2118530273438\n",
-      "epoch: 8  train_loss: 785.9727172851562\n",
-      "epoch: 9  train_loss: 780.9059448242188\n",
-      "epoch: 10  train_loss: 793.92236328125\n",
-      "epoch: 11  train_loss: 770.1373291015625\n",
-      "epoch: 12  train_loss: 803.3665771484375\n",
-      "epoch: 13  train_loss: 748.1373291015625\n",
-      "epoch: 14  train_loss: 776.3211669921875\n",
-      "epoch: 15  train_loss: 778.6280517578125\n",
-      "epoch: 16  train_loss: 782.7469482421875\n",
-      "epoch: 17  train_loss: 822.858642578125\n",
-      "epoch: 18  train_loss: 784.6966552734375\n",
-      "epoch: 19  train_loss: 784.09423828125\n",
-      "epoch: 20  train_loss: 755.5997314453125\n",
-      "epoch: 21  train_loss: 791.8162231445312\n",
-      "epoch: 22  train_loss: 710.8643798828125\n",
-      "epoch: 23  train_loss: 801.2280883789062\n",
-      "epoch: 24  train_loss: 900.1364135742188\n",
-      "epoch: 25  train_loss: 850.956298828125\n",
-      "epoch: 26  train_loss: 859.9680786132812\n",
-      "epoch: 27  train_loss: 854.03955078125\n",
-      "epoch: 28  train_loss: 831.4151611328125\n",
-      "epoch: 29  train_loss: 843.4048461914062\n",
-      "epoch: 30  train_loss: 865.0391235351562\n",
-      "epoch: 31  train_loss: 870.4349975585938\n",
-      "epoch: 32  train_loss: 858.195068359375\n",
-      "epoch: 33  train_loss: 872.4003295898438\n",
-      "epoch: 34  train_loss: 820.6697387695312\n",
-      "epoch: 35  train_loss: 809.210205078125\n",
-      "epoch: 36  train_loss: 879.5816040039062\n",
-      "epoch: 37  train_loss: 835.8436889648438\n",
-      "epoch: 38  train_loss: 828.64794921875\n",
-      "epoch: 39  train_loss: 828.99658203125\n",
-      "epoch: 40  train_loss: 881.269287109375\n",
-      "epoch: 41  train_loss: 905.572998046875\n",
+      "epoch: 0  train_loss: 104.50736236572266\n",
+      "epoch: 1  train_loss: 49.16930389404297\n",
+      "epoch: 2  train_loss: 44.45543670654297\n",
+      "epoch: 3  train_loss: 35.22999954223633\n",
+      "epoch: 4  train_loss: 34.56815719604492\n",
+      "epoch: 5  train_loss: 27.8295955657959\n",
+      "epoch: 6  train_loss: 28.724287033081055\n",
+      "epoch: 7  train_loss: 31.84865951538086\n",
+      "epoch: 8  train_loss: 27.3794002532959\n",
+      "epoch: 9  train_loss: 23.089242935180664\n",
+      "epoch: 10  train_loss: 20.871292114257812\n",
+      "epoch: 11  train_loss: 18.80219078063965\n",
+      "epoch: 12  train_loss: 19.508909225463867\n",
+      "epoch: 13  train_loss: 17.975379943847656\n",
+      "epoch: 14  train_loss: 18.356740951538086\n",
+      "epoch: 15  train_loss: 17.13743782043457\n",
+      "epoch: 16  train_loss: 18.1928653717041\n",
+      "epoch: 17  train_loss: 13.30143928527832\n",
+      "epoch: 18  train_loss: 13.790485382080078\n",
+      "epoch: 19  train_loss: 12.904794692993164\n",
+      "epoch: 20  train_loss: 14.5535306930542\n",
+      "epoch: 21  train_loss: 12.94597339630127\n",
+      "epoch: 22  train_loss: 12.660889625549316\n",
+      "epoch: 23  train_loss: 15.191707611083984\n",
+      "epoch: 24  train_loss: 12.7969331741333\n",
+      "epoch: 25  train_loss: 12.89606761932373\n",
+      "epoch: 26  train_loss: 13.158745765686035\n",
+      "epoch: 27  train_loss: 12.880878448486328\n",
+      "epoch: 28  train_loss: 12.217449188232422\n",
+      "epoch: 29  train_loss: 12.661105155944824\n",
+      "epoch: 30  train_loss: 13.02100658416748\n",
+      "epoch: 31  train_loss: 13.282583236694336\n",
+      "epoch: 32  train_loss: 13.550216674804688\n",
+      "epoch: 33  train_loss: 13.64780330657959\n",
+      "epoch: 34  train_loss: 13.264726638793945\n",
+      "epoch: 35  train_loss: 12.747758865356445\n",
+      "epoch: 36  train_loss: 12.58414363861084\n",
+      "epoch: 37  train_loss: 13.554905891418457\n",
+      "epoch: 38  train_loss: 13.263618469238281\n",
+      "epoch: 39  train_loss: 13.562039375305176\n",
+      "epoch: 40  train_loss: 12.51027774810791\n",
+      "epoch: 41  train_loss: 13.511019706726074\n",
+      "epoch: 42  train_loss: 13.59985637664795\n",
+      "epoch: 43  train_loss: 13.272869110107422\n",
+      "epoch: 44  train_loss: 13.327698707580566\n",
+      "epoch: 45  train_loss: 13.543978691101074\n",
+      "epoch: 46  train_loss: 12.888923645019531\n",
       "Early stopping!!!\n"
      ]
     },
@@ -344,7 +336,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +349,7 @@
     "optimizer = torch.optim.Adam(problem.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
     "trainer = nm.trainer.Trainer(problem, loader_train, loader_dev, loader_test, optimizer, \n",
-    "                            epochs=epochs, patience=patience, warmup=warmup)\n",
+    "                             epochs=epochs, patience=patience, warmup=warmup)\n",
     "# training for the rounding problem\n",
     "best_model = trainer.train()\n",
     "# load best model dict\n",
@@ -366,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
    "metadata": {},
    "outputs": [
@@ -374,7 +366,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 279.96it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 304.04it/s]\n"
      ]
     },
     {
@@ -383,14 +375,14 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    172.488021          4.500875      0.003061\n",
-      "std      69.913600          2.855412      0.000801\n",
-      "min       0.918686          0.000000      0.001511\n",
-      "25%     119.792898          2.039958      0.002531\n",
-      "50%     207.926413          4.407502      0.003000\n",
-      "75%     215.842241          6.916592      0.003517\n",
-      "max     325.320161          9.995356      0.007171\n",
-      "Number of infeasible solution: 955\n"
+      "mean     13.494995          0.000381      0.002816\n",
+      "std       8.372295          0.006183      0.000833\n",
+      "min       0.172183          0.000000      0.001000\n",
+      "25%       7.683434          0.000000      0.002006\n",
+      "50%      11.968182          0.000000      0.002996\n",
+      "75%      17.553032          0.000000      0.003018\n",
+      "max      45.346165          0.134142      0.007729\n",
+      "Number of infeasible solution: 4\n"
      ]
     }
    ],
@@ -428,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "603e5451-8d97-4bf3-a093-ee5444747a8f",
+   "id": "18e5ebaf-0fb6-4a76-9e61-8ccb3abc99dd",
    "metadata": {},
    "outputs": [],
    "source": []
